# drf-choices-mixin

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  PUBLISHING.md  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml
api-reference/: index.html
configuration/: index.html
docs/: api-reference.md  conf.py  configuration.md  getting-started.md  index.md
getting-started/: index.html
search/: search_index.json
src/django_rest_choices/: mixins.py
src/drf_choices_mixin/: __init__.py  mixins.py
tests/: conftest.py  models.py  serializers.py  test_mixins.py  urls.py  views.py
