[project]
name = "drf-choices-mixin"
version = "0.1.0"
description = "A Django REST Framework mixin that auto-generates API endpoints for model field choices"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Denny Biasiolli", email = "denny.biasiolli@gmail.com" },
]
keywords = ["django", "rest", "framework", "choices", "mixin", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Framework :: Django :: 5.2",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "django>=4.2",
    "djangorestframework>=3.15",
]

[project.urls]
Homepage = "https://github.com/dennybiasiolli/drf-choices-mixin"
Documentation = "https://dennybiasiolli.github.io/drf-choices-mixin/"
Repository = "https://github.com/dennybiasiolli/drf-choices-mixin"
Issues = "https://github.com/dennybiasiolli/drf-choices-mixin/issues"
Changelog = "https://github.com/dennybiasiolli/drf-choices-mixin/releases"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-django>=4.11",
    "ruff>=0.11",
]
docs = [
    "sphinx>=8.0",
    "furo>=2024.8",
    "myst-parser>=4.0",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "S", "UP", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "RUF012"]

[tool.pytest.ini_options]
pythonpath = ["src"]
